--- a/public/sass/variables.scss
+++ b/public/sass/variables.scss
@@ -23,7 +23,13 @@
     $gray-lightish:          lighten(#000, 80%) !default;   // #ccc
     $gray-lighter:           lighten(#000, 93.5%) !default; // #eee
 
-
+/* ==========================================================================
+   Tag Colors
+   ========================================================================== */
+    $tag-all: $gray-light;
+    $tag-tips: $flat-green;
+    $tag-tutorials: $flat-blue;
+    $tag-personal: $flat-orange;
 /* ==========================================================================
    Global Dimensions
    ========================================================================== */
